[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/gui/menus/reusable/ItemRewardGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/dogicapixelbold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/headline_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/gui/menus/misc/reward_screen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer"]
margin_left = 64.0
margin_top = 8.0
margin_right = 960.0
margin_bottom = 504.0
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 888.0
margin_bottom = 488.0
rect_clip_content = true
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 4.0
margin_right = 880.0
margin_bottom = 476.0
custom_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "Quest Completed!"
align = 1
valign = 1

[node name="QuestTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 880.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="FlavourText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 880.0
margin_bottom = 268.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 880.0
margin_bottom = 312.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 872.0
margin_bottom = 20.0
text = "Rewards"

[node name="GridContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 148.0
margin_top = 328.0
margin_right = 732.0
margin_bottom = 408.0

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 376.0
margin_top = 424.0
margin_right = 504.0
margin_bottom = 472.0
rect_min_size = Vector2( 128, 48 )
size_flags_horizontal = 4
text = "Accept"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]
